# RoadMapProjects

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
API/: admin.py  middleware.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
API/migrations/: 0003_alter_user_email.py  0008_alter_user_email.py
Blog/: admin.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
ExpenseTracker/: .gitignore  README.md  pyproject.toml
ExpenseTrackerAPI/: settings.py  urls.py
ExpenseTrackerApi/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
ExpenseTrackerApi/API/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
ExpenseTrackerApi/API/migrations/: 0001_initial.py  0002_alter_expense_user.py
ExpenseTrackerApi/ExpenseTrackerAPI/: urls.py
GitHubUserActivity/: .gitignore
GitHubUserActivity/app/: main.py
Markdown API/: pyproject.toml
Markdown API/MarkdownAPI/: settings.py
NumberGuessingGame/: README.md  pyproject.toml
PersonalBlog/: .gitignore  manage.py
PersonalBlog1/: asgi.py  settings.py  urls.py  wsgi.py
PersonalBlogDjango/: .gitignore  README.md  pyproject.toml
RESTBlog/: asgi.py  settings.py  urls.py
TaskTrackerCLI/: README.md  pyproject.toml
TodoListAPI/: settings.py
TodoListApi/: .gitignore  Dockerfile  pyproject.toml
UnitConverter/: .gitignore  manage.py  pyproject.toml
Units/: settings.py  urls.py
WeatherAPI/: .gitignore  README.md
app/: main.py
templates/: add_article.html  article.html  articles.html  base.html  basic.html  dashboard.html  edit_article.html  home.html  signup.html  unit_converter.html
test/: test_main.py
tests/: main_tests.py  test_main.py
(+54 files in other folders)
