[tool.poetry]
name = "weatherapi"
version = "0.1.0"
description = ""
authors = ["Sadra Hosseini <sadrahosseini98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
