[tool.poetry]
name = "weatherapi"
version = "0.1.0"
description = ""
authors = ["Sadra Hosseini <sadrahosseini98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.2.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
