[tool.poetry]
name = "expensetrackerapi"
version = "0.1.0"
description = ""
authors = ["Sadra Hosseini <sadrahosseini98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
djangorestframework-simplejwt = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
