[project]
name = "markdownapi"
version = "0.1.0"
description = "a simpole note-taking app that lets users upload markdown files, check the grammer, save the note and render it in HTML."
authors = [
    {name = "Sadra Hosseini",email = "sadrahosseini98@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==5.2)",
    "django-rest-framework (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
